<resources>
    <string name="app_name">Sign in form</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Create An Account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="create">Create</string>
    <string name="already_member">Already created an account?</string>
    <string name="new_member">New Member?</string>
    <string name="sign_in">Sign in</string>
    <string name="background_image">Background Image</string>
    <string name="logo_txt">S</string>
</resources>